--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "xivweather": "^1.5.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
