--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@mui/material-nextjs": "^6.1.9",
+    "@next/mdx": "^15.1.5",
+    "@types/mdx": "^2.0.13",
     "jotai": "^2.11.0",
     "leaflet": "^1.9.4",
     "next": "^15.1.4",
